--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="display-id">
+        <div id="horas-id"></div>
+        <h1>:</h1>
+        <div id="minutos-id"></div>
+        <h1>:</h1>
+        <div id="segundos-id"></div>
+       
+    </div>
+    <div id="texto-data"></div>
     <div class="conteiner">
         <div class="card">
             <h1 class="card-header"> Lista de Tarefas</h1>
@@ -15,7 +24,7 @@
                 <div class="input-group mb-3">
                     <input type="text" class="form-control" placeholder="Digite uma tarefa" name="tarefa" autofocus>
                     <div class="input-group-append">
-                        <button class="btn btn-primary" type="button" id="botao">Cadastrar</button>   
+                        <button class="btn btn-primary-bg-black"  type="button" id="botao">Cadastrar</button>   
                     </div>
                 </div>
                 <ul id="lista" class="list-group">
