--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
                 <div class="input-group mb-3">
                     <input type="text" class="form-control" placeholder="Digite uma tarefa" name="tarefa" autofocus>
                     <div class="input-group-append">
-                        <button class="btn btn-primary-bg-black"  type="button" id="botao">Cadastrar</button>   
+                        <button class="btn btn-primary-bg-black"  type="button" id="botao">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
+                                <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3z"/>
+                              </svg>
+                        </button>   
                     </div>
                 </div>
                 <ul id="lista" class="list-group">
